--- a/LifeScienceData/lecture15/melt_pivot.ipynb
+++ b/LifeScienceData/lecture15/melt_pivot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2988d66f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "32c5d04e",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "3               D         24.1        44  DHT20"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "50b36a05",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "7               D  DHT20     Humidity   44.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "99b25ffb",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "5               B         26.2  03:12:50  DHT11"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "eb69bb42",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
        "03:12:50 DHT11    NaN  26.2"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,6 +434,106 @@
    "source": [
     "pivoted = df2.pivot(index=['Time', 'Type'], columns=\"Measuring point\", values=\"Temperature\")\n",
     "pivoted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7d311947",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Measuring point</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>03:08:32</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>03:08:34</td>\n",
+       "      <td>DHT11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>03:10:54</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>23.4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>03:10:56</td>\n",
+       "      <td>DHT11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>03:12:45</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>03:12:50</td>\n",
+       "      <td>DHT11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Measuring point      Time   Type     A     B\n",
+       "0                03:08:32  DHT22  23.2   NaN\n",
+       "1                03:08:34  DHT11   NaN  25.5\n",
+       "2                03:10:54  DHT22  23.4   NaN\n",
+       "3                03:10:56  DHT11   NaN  25.0\n",
+       "4                03:12:45  DHT22  24.1   NaN\n",
+       "5                03:12:50  DHT11   NaN  26.2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resetindex = pivoted.reset_index()\n",
+    "resetindex"
    ]
   },
   {
@@ -473,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
