--- a/LifeScienceData/lecture16/melt_pivot.ipynb
+++ b/LifeScienceData/lecture16/melt_pivot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2988d66f",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "32c5d04e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Measuring point</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>55</td>\n",
+       "      <td>DHT22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>51</td>\n",
+       "      <td>DHT11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>DHT22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>44</td>\n",
+       "      <td>DHT20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Measuring point  Temperature  Humidity   Type\n",
+       "0               A         23.2        55  DHT22\n",
+       "1               B         25.5        51  DHT11\n",
+       "2               C         25.0        60  DHT22\n",
+       "3               D         24.1        44  DHT20"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame({\n",
     "    'Measuring point': ['A', 'B', 'C', 'D'],\n",
@@ -36,10 +109,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "50b36a05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Measuring point</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>Temperature</td>\n",
+       "      <td>23.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>DHT11</td>\n",
+       "      <td>Temperature</td>\n",
+       "      <td>25.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>Temperature</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>D</td>\n",
+       "      <td>DHT20</td>\n",
+       "      <td>Temperature</td>\n",
+       "      <td>24.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>Humidity</td>\n",
+       "      <td>55.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B</td>\n",
+       "      <td>DHT11</td>\n",
+       "      <td>Humidity</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>C</td>\n",
+       "      <td>DHT22</td>\n",
+       "      <td>Humidity</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>D</td>\n",
+       "      <td>DHT20</td>\n",
+       "      <td>Humidity</td>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Measuring point   Type     variable  value\n",
+       "0               A  DHT22  Temperature   23.2\n",
+       "1               B  DHT11  Temperature   25.5\n",
+       "2               C  DHT22  Temperature   25.0\n",
+       "3               D  DHT20  Temperature   24.1\n",
+       "4               A  DHT22     Humidity   55.0\n",
+       "5               B  DHT11     Humidity   51.0\n",
+       "6               C  DHT22     Humidity   60.0\n",
+       "7               D  DHT20     Humidity   44.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "melted = pd.melt(df, id_vars=['Measuring point', 'Type']) # Specify column names: var_name='', value_name=''\n",
     "melted"
@@ -55,10 +233,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "99b25ffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Measuring point</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>03:08:32</td>\n",
+       "      <td>DHT22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>03:08:34</td>\n",
+       "      <td>DHT11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>23.4</td>\n",
+       "      <td>03:10:54</td>\n",
+       "      <td>DHT22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>03:10:56</td>\n",
+       "      <td>DHT11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>03:12:45</td>\n",
+       "      <td>DHT22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>03:12:50</td>\n",
+       "      <td>DHT11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Measuring point  Temperature      Time   Type\n",
+       "0               A         23.2  03:08:32  DHT22\n",
+       "1               B         25.5  03:08:34  DHT11\n",
+       "2               A         23.4  03:10:54  DHT22\n",
+       "3               B         25.0  03:10:56  DHT11\n",
+       "4               A         24.1  03:12:45  DHT22\n",
+       "5               B         26.2  03:12:50  DHT11"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df2 = pd.DataFrame({\n",
     "    'Measuring point': ['A', 'B', 'A', 'B', 'A', 'B'],\n",
@@ -71,10 +338,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eb69bb42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Measuring point</th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Time</th>\n",
+       "      <th>Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>03:08:32</th>\n",
+       "      <th>DHT22</th>\n",
+       "      <td>23.2</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03:08:34</th>\n",
+       "      <th>DHT11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03:10:54</th>\n",
+       "      <th>DHT22</th>\n",
+       "      <td>23.4</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03:10:56</th>\n",
+       "      <th>DHT11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03:12:45</th>\n",
+       "      <th>DHT22</th>\n",
+       "      <td>24.1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03:12:50</th>\n",
+       "      <th>DHT11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Measuring point     A     B\n",
+       "Time     Type              \n",
+       "03:08:32 DHT22   23.2   NaN\n",
+       "03:08:34 DHT11    NaN  25.5\n",
+       "03:10:54 DHT22   23.4   NaN\n",
+       "03:10:56 DHT11    NaN  25.0\n",
+       "03:12:45 DHT22   24.1   NaN\n",
+       "03:12:50 DHT11    NaN  26.2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pivoted = df2.pivot(index=['Time', 'Type'], columns=\"Measuring point\", values=\"Temperature\")\n",
     "pivoted"
@@ -94,23 +450,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c0a7887b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DataFrame.pivot() missing 1 required keyword-only argument: 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mreversed\u001b[39m = \u001b[43mmelted\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpivot\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: DataFrame.pivot() missing 1 required keyword-only argument: 'columns'"
+     ]
+    }
+   ],
    "source": [
     "reversed = melted.pivot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dbddd2e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "reversed2 = pivoted.reset_index().melt()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42f4ba20",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -129,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
